# cmake

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  sdkconfig
.github/workflows/: ci.yml
src/: init..c  init.h  main.c
src/include/: module1_com.h  module2_com.h  module3_com.h
src/module1/: module1_1.c  module1_1.h  module1_com.c
src/module2/: module2_1.c  module2_1.h  module2_com.c
src/module3/: module3_1.c  module3_1.h  module3_com.c
src/module4/: module4_1.c  module4_1.h  module4_com.c
